# token-auditor

./: .gitignore  COMPLETION_REPORT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RELEASE_GUIDE.md  TEST_REPORT.md  test_multi_api.py
config/: default.toml
src/: cli.rs  config.rs  lib.rs  main.rs  tests.rs
src/audit/: benchmark.rs  cost.rs  mod.rs  prices.rs  token.rs
src/display/: mod.rs  onboarding.rs  terminal.rs
src/proxy/: forwarder.rs  handler.rs  mod.rs  server.rs
src/runtime/: audit_rt.rs  channel.rs  mod.rs  proxy_rt.rs
src/storage/: cache.rs  mod.rs  snapshot.rs
tests/: integration_tests.rs
