[package]
name = "token-auditor"
version = "0.1.0"
edition = "2021"
description = "本地 AI 成本监控与分析工具"
license = "MIT"
authors = ["TokenAuditor Team"]

[[bin]]
name = "token-auditor"
path = "src/main.rs"

[lib]
name = "token_auditor"
path = "src/lib.rs"

[dependencies]
# 异步运行时
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }

# HTTP 代理（使用 0.14 版本以兼容 reqwest）
hyper = { version = "0.14", features = ["full"] }

# CLI 解析
clap = { version = "4.4", features = ["derive"] }

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 配置解析
toml = "0.8"

# Token 计算
tiktoken-rs = "0.5"

# 终端输出
colored = "2.1"

# HTTP 客户端（用于代理转发和价格获取）
reqwest = { version = "0.11", features = ["json"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 并发
tokio-util = "0.7"

# 目录处理
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"
